header: fix layout jumping with reload button

--- a/frontend/css/layout.css
+++ b/frontend/css/layout.css
@@ -38,6 +38,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   grid-area: header;
+  gap: 0.5em;
   align-items: center;
   padding: 0.5em;
   color: var(--header-color);
